implement language helper
